# vibe-coding-interview

./: .dockerignore  .env.example  .gitignore  BAND_UI_IMPLEMENTATION.md  BONUS_UI_SPEC.md  CHALLENGE_AUTHORING.md  CLAUDE.md  CODE_DIFF_UI.md  DEPLOYMENT.md  FACTORS_UI_IMPLEMENTATION.md  GRADING_METRICS_MAP.md  GRADING_RUBRICS.md  LOGGING.md  docker-compose.yml  dummy_grading_report.html  pyproject.toml  techinical_implementation.md  vibe_interview_plan.md  vibe_interview_plan_enhanced.md
.claude/: settings.local.json
challenges/cpp-lru-cache/: README.md  SETUP.md
challenges/cpp-thread-safe-cache/: .gitignore  CMakeLists.txt  NOTES.md  README.coding-interview.md  README.md  SETUP.md  setup.sh
challenges/cpp-wafer-telemetry/: .gitignore  CMakeLists.txt  README.md  SETUP.md
challenges/cpp-wafer-telemetry/.jivahire/: metadata.json  rubric.json  traps.json
challenges/cpp-wafer-telemetry/src/: chamber_aggregator.cpp  chamber_aggregator.h  excursion_reporter.cpp  excursion_reporter.h  main.cpp  sensor_reading.h  spc_limits.cpp  spc_limits.h
challenges/cpp-wafer-telemetry/tests/: hidden_tests.cpp  public_tests.cpp
challenges/javascript-paginated-user-search/: .gitignore  README.md  SETUP.md  package.json  vitest.config.js
challenges/python-money/: .gitignore  README.coding-interview.md  README.md  SETUP.md  pyproject.toml  setup.ps1  setup.sh
challenges/python-money/.jivahire/: metadata.json  rubric.json  tokens.json  traps.json
challenges/python-money/src/: money.py
challenges/python-money/tests/: test_hidden.py  test_public.py
challenges/python-ttl-cache/: README.md  SETUP.md  pyproject.toml
challenges/python-ttl-cache/.jivahire/: metadata.json  rubric.json  traps.json
challenges/python-ttl-cache/src/: ttl_cache.py
challenges/python-ttl-cache/tests/: test_hidden.py  test_public.py
challenges/react-shopping-cart/: .gitignore  README.coding-interview.md  README.md  SETUP.md  index.html  package.json  setup.ps1  setup.sh  vite.config.js  vitest.config.js
challenges/typescript-deep-merge/: .gitignore  README.coding-interview.md  README.md  SETUP.md  package-lock.json  package.json  setup.ps1  setup.sh  tsconfig.json  vitest.config.ts
challenges/typescript-rate-limiter/: .gitignore  README.md  SETUP.md  package.json  tsconfig.json  vitest.config.ts
extension/: esbuild.js  jest.config.js  package-lock.json  package.json
extension/__mocks__/: vscode.ts
extension/src/: api.ts  extension.ts  logger.ts  submit.ts  telemetry.ts  timer.ts
scripts/: init_db.py  measure_repo_tokens.py  push_jivahire_to_main.py  reband_grades.py  seed_dev_session.py
server/: Dockerfile
server/static/: app.js  author-docs.html  index.html  style.css
server/vibe/: app_logs.py  auth.py  author_docs.py  budget.py  config.py  (+21 more)
tests/: conftest.py  test_app_logs.py  test_bonus_surface.py  test_challenge_tests.py  test_code_quality_traps.py  test_developer_signals.py  test_e2e.py  test_engagement.py  test_github_app.py  test_grading_dimensions.py  test_grading_errors.py  test_json_parse_retry.py  test_llm_proxy_context.py  test_logging_config.py  test_model_allowlist.py  test_model_pricing.py  test_prompt_quality_deterministic.py  test_repo_files.py  test_repo_tokens.py  test_report.py  test_self_consistency.py  test_session_preflight.py  test_signals.py  test_signals_injected.py  test_telemetry_ingest.py  test_telemetry_integrity.py
worker/: Dockerfile  seccomp.json
(+83 files in other folders)
