[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "money-challenge"
version = "0.1.0"
description = "Safe money value-type coding challenge"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["money"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "basic: basic correctness (construction, equality, arithmetic, formatting)",
    "rounding: parsing decimal strings to exact cents",
    "currency: rejecting operations that mix currencies",
    "allocate: splitting an amount without losing or creating cents",
]
